Fixed vertical align on ::before element in "bra att veta"

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -994,6 +994,9 @@ input[type=text]:focus.invalid {
 
     @media (max-width: 1005px) {
         .exnfodispl {
+            ::before {
+                vertical-align: top;
+            }
             b {
                 vertical-align: top;
             }
